--- a/packages/badge/package.json
+++ b/packages/badge/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "main": "lib/index.js",
   "author": "elemefe",
-  "homepage": "https://github.com/ElemeFE/mint-ui",
+  "homepage": "https://github.com/ElemeFE/mint-ui-xlq",
   "license": "MIT",
-  "repository": "https://github.com/ElemeFE/mint-ui/tree/master/components/mint-badge",
+  "repository": "https://github.com/ElemeFE/mint-ui-xlq/tree/master/components/mint-badge",
   "dependencies": {
   }
 }
