--- a/packages/loadmore/package.json
+++ b/packages/loadmore/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.2",
   "main": "lib/index.js",
   "author": "elemefe",
-  "homepage": "https://github.com/ElemeFE/mint-ui",
+  "homepage": "https://github.com/ElemeFE/mint-ui-xlq",
   "license": "MIT",
-  "repository": "https://github.com/ElemeFE/mint-ui/tree/master/components/mint-loadmore",
+  "repository": "https://github.com/ElemeFE/mint-ui-xlq/tree/master/components/mint-loadmore",
   "dependencies": {}
 }
