--- a/packages/palette-button/package.json
+++ b/packages/palette-button/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "main": "lib/index.js",
   "author": "cia.fbi.007@hotmail.com",
-  "homepage": "https://github.com/ElemeFE/mint-ui",
+  "homepage": "https://github.com/ElemeFE/mint-ui-xlq",
   "license": "MIT",
-  "repository": "https://github.com/ElemeFE/mint-ui/tree/master/components/palette-button",
+  "repository": "https://github.com/ElemeFE/mint-ui-xlq/tree/master/components/palette-button",
   "dependencies": {
   }
 }
