--- a/packages/picker/package.json
+++ b/packages/picker/package.json
@@ -3,9 +3,9 @@
   "description": "",
   "version": "0.1.0",
   "main": "lib/index.js",
-  "homepage": "https://github.com/ElemeFE/mint-ui",
+  "homepage": "https://github.com/ElemeFE/mint-ui-xlq",
   "license": "MIT",
-  "repository": "https://github.com/ElemeFE/mint-ui/tree/master/components/mint-picker",
+  "repository": "https://github.com/ElemeFE/mint-ui-xlq/tree/master/components/mint-picker",
   "keywords": [
     "picker",
     "multi slots",
