--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mint-ui-xlq-xlq",
-  "version": "1.0.2",
+  "name": "mint-ui-xlq",
+  "version": "1.0.3",
   "description": "Mobile UI elements for vue.js",
   "keywords": [
     "component",
